--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
 </style>
   <body >
   <ul id="dropdown1" class="dropdown-content">
-    <li><a href="earthquake.html?type=past_hour">Past Hour</a></li>
-    <li><a href="earthquake.html?type=all_day">Past Day</a></li>
-    <li><a href="earthquake.html?type=all_week">Past Week</a></li>
-    <li><a href="earthquake.html?type=all_month">Past Month</a></li>
+    <li><a href="earthquake.html?type=all_hour">Past Hour</a></li>
+    <li><a href="earthquake.html?type=2.5_day">Past Day</a></li>
+    <li><a href="earthquake.html?type=4.5_week">Past Week</a></li>
+    <li><a href="earthquake.html?type=4.5_month">Past Month</a></li>
   </ul>
 
   <nav>
@@ -117,11 +117,5 @@
 
   var coordinates = document.getElementById('coordinates');
   
-  // $(document).ready(function(){
-  //     $('.modal-trigger').leanModal();
-  // });
-  
-  // $('#modal1').openModal();
-  // $('#modal1').closeModal();
 </script>
 
